--- a/hw/xtensa/Makefile.objs
+++ b/hw/xtensa/Makefile.objs
@@ -5,3 +5,4 @@ obj-$(CONFIG_XTENSA_SIM) += sim.o
 obj-$(CONFIG_XTENSA_VIRT) += virt.o
 obj-$(CONFIG_XTENSA_XTFPGA) += xtfpga.o
 obj-$(CONFIG_ESP32) += esp32.o
+obj-$(CONFIG_ESP32)  += esp32s2.o
