--- a/hw/gpio/Makefile.objs
+++ b/hw/gpio/Makefile.objs
@@ -11,3 +11,4 @@ common-obj-$(CONFIG_RASPI) += bcm2835_gpio.o
 common-obj-$(CONFIG_NRF51_SOC) += nrf51_gpio.o
 common-obj-$(CONFIG_ASPEED_SOC) += aspeed_gpio.o
 common-obj-$(CONFIG_ESP32) += esp32_gpio.o
+common-obj-$(CONFIG_ESP32) += esp32s2_gpio.o
