--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,23 @@
-# This is a basic workflow to help you get started with Actions
+name: CI build
 
-name: CI
+on: [push]
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+        
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Install dependencies
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        sudo apt-get install build-essential libpixman-1-0 libpixman-1-dev libglib2.0-dev zlib1g-dev
+    - name: Compile qemu
+      run: |
+        mkdir qemu_esp32s2
+        cd qemu_esp32s2
+        $GITHUB_WORKSPACE/configure --disable-werror --prefix=./root --enable-debug --enable-sanitizers  --disable-capstone   --disable-strip --target-list=xtensa-softmmu,riscv32-softmmu 
+        make -j 2
+    - uses: actions/upload-artifact@master
+      with:
+        name: qemu-system-xtensa
+        path: ./qemu_esp32s2/xtensa-softmmu/qemu-system-xtensa
