--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
-        sudo apt-get install build-essential libpixman-1-0 libpixman-1-dev libglib2.0-dev zlib1g-dev
+        sudo apt-get install build-essential libpixman-1-0 libpixman-1-dev libglib2.0-dev zlib1g-dev ninja-build  libgcrypt20-dev
     - name: Compile qemu
       run: |
         mkdir qemu_esp32s2
-        cd qemu_esp32s2
+	cd $GITHUB_WORKSPACE
+	git submodule update --init meson
+        cd
+	cd qemu_esp32s2
         $GITHUB_WORKSPACE/configure --disable-werror --prefix=./root --enable-debug --enable-sanitizers  --disable-capstone   --disable-strip --target-list=xtensa-softmmu,riscv32-softmmu 
         make -j 2
     - uses: actions/upload-artifact@master
