Missing trace.h files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/GNUmakefile
+/build/
+*.pyc
 /.doctrees
 /config-devices.*
 /config-all-devices.*
@@ -144,7 +147,7 @@ docker-src.*
 *~
 *.ast_raw
 *.depend_raw
-trace.h
+#trace.h
 trace.c
 trace-ust.h
 trace-ust.h
