--- a/hw/ssi/meson.build
+++ b/hw/ssi/meson.build
@@ -9,3 +9,4 @@ softmmu_ss.add(when: 'CONFIG_XILINX_SPIPS', if_true: files('xilinx_spips.c'))
 softmmu_ss.add(when: 'CONFIG_IMX', if_true: files('imx_spi.c'))
 softmmu_ss.add(when: 'CONFIG_OMAP', if_true: files('omap_spi.c'))
 softmmu_ss.add(when: 'CONFIG_XTENSA_ESP32', if_true: files('esp32_spi.c'))
+softmmu_ss.add(when: 'CONFIG_XTENSA_ESP32S2', if_true: files('esp32s2_spi.c'))
